--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="JS/index.js"></script>
-    <script src="JS/repaso.js"></script>
+<script src="/JS/Desafio1.js"></script>
     <title>JS</title>
 </head>
 <body>
