--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="/JS/Desafio1.js"></script>
+<script src="../js/Desafio1.js"></script>
     <title>JS</title>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <h1>primera prueba JS</h1>
+
+
+<h1>calculador de cuotas</h1>
+
+
+
+
 </body>
 </html>
