--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="../js/Desafio1.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="../js/Desafio2.js"></script>
     <title>JS</title>
-    <link rel="stylesheet" href="../css/main.css">
-</head>
-<body>
-
-
-<h1>calculador de cuotas</h1>
-
-
-
-
-</body>
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
+  <body>
+    <h1>calculador de cuotas</h1>
+  </body>
 </html>
