--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <script defer src="/js/Desafio2.js"></script>
     <title>JS</title>
   </head>
-  <body>
+  <body id = "body">
+    
     <nav>
       <ul id="nav">
+        <a href="../index.html" class="logoInicio"><img src="../img/logo inicio.webp" alt=""></a>
         <li><a href="Quienes_somos?">Quienes somos?</a></li>
         <li><a href="Productos">Productos</a></li>
         <li><a href="Info_de_interes">Info de interes</a></li>
         <li><a href="En_tu_cafeteria">En tu cafeteria</a></li>
-        <img class="carritocomp" src="../img/carritocomp.png" alt="" />
+        <a href="../carrito.html" id = "btnCarrito"><img class="carritocomp" src="../img/carritocomp.png" alt="" /></a>
       </ul>
     </nav>
 
     <div id="productos"></div>
+ 
   </body>
+
   <footer id="footer">
     <div id="redes">
     <a href=""><img id="insta" src="../img/instagram.png" alt="" /></a>
@@ -28,4 +32,5 @@
     <a href=""><img id="twitter" src="../img/twitter.png" alt="" /></a>
  </div>
   </footer>
+
 </html>
