--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <script defer src="/js/Desafio2.js"></script>
     <title>JS</title>
   </head>
-  <body id = "body">
-    
+  <body id="body">
     <nav>
       <ul id="nav">
-        <a href="../index.html" class="logoInicio"><img src="../img/logo inicio.webp" alt=""></a>
+        <a href="../index.html" class="logoInicio"
+          ><img src="../img/logo inicio.webp" alt=""
+        /></a>
         <li><a href="Quienes_somos?">Quienes somos?</a></li>
         <li><a href="Productos">Productos</a></li>
         <li><a href="Info_de_interes">Info de interes</a></li>
         <li><a href="En_tu_cafeteria">En tu cafeteria</a></li>
-        <a href="../carrito.html" id = "btnCarrito"><img class="carritocomp" src="../img/carritocomp.png" alt="" /></a>
+        <a href="../carrito.html" id="btnCarrito"
+          ><img class="carritocomp" src="../img/carritocomp.png" alt=""
+        /></a>
       </ul>
     </nav>
 
     <div id="productos"></div>
- 
   </body>
 
   <footer id="footer">
     <div id="redes">
-    <a href=""><img id="insta" src="../img/instagram.png" alt="" /></a>
-    <a href=""><img id="facebook" src="../img/facebook.png" alt="" /></a>
-    <a href=""><img id="twitter" src="../img/twitter.png" alt="" /></a>
- </div>
+      <a href=""><img id="insta" src="../img/instagram.png" alt="" /></a>
+      <a href=""><img id="facebook" src="../img/facebook.png" alt="" /></a>
+      <a href=""><img id="twitter" src="../img/twitter.png" alt="" /></a>
+    </div>
   </footer>
-
 </html>
