--- a/carrito.html
+++ b/carrito.html
@@ -31,8 +31,8 @@
       </div>
       <div id="carritoBtns">
         <p id="tituloCarrito">Carrito</p>
-        <button id="btnVaciar"></button>
-        <button id="btnComprar"></button>
+        <button id="btnVaciar">Vaciar carrito</button>
+        <button id="btnComprar">Finzalizar compra</button>
       </div>
     </div>
   </body>
