--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script defer src="/js/Desafio2.js"></script>
+    <script defer src="/js/carrito.js"></script>
     <title>Shopping cart</title>
   </head>
 
@@ -26,14 +26,18 @@
     </nav>
 
     <div id="carritoComp">
+
       <div id="carritoProds">
-        <p id="txtCarritoVacio">tu carrito esta vacio</p>
+        <p id= "txtCarritoVacio" >tu carrito esta vacio</p>
       </div>
+
       <div id="carritoBtns">
         <p id="tituloCarrito">Carrito</p>
+        <p id="precioFinal"></p>
         <button id="btnVaciar">Vaciar carrito</button>
         <button id="btnComprar">Finzalizar compra</button>
       </div>
+      
     </div>
   </body>
 
