--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script defer src="/js/Desafio2.js"></script>
+    <script defer src="/js/index.js"></script>
     <title>JS</title>
   </head>
   <body id="body">
