--- a/carrito.html
+++ b/carrito.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="/js/carrito.js"></script>
     <title>Shopping cart</title>
   </head>
